:sparkles: google maps api problem fix was missing second script tag styling for contact form and google maps section require styling rmeove whitespace on side

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -71,8 +71,14 @@ body {
     }
 }
 
+#contact .fa {
+    font-size: 2.5rem;
+    margin-bottom: 1rem;
+}
 
-
+.section .mb-4 {
+    
+}
 
 
 
